--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
-    "discord.js": "^14.11.0"
-  }
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.0.3"
+  },
+  "name": "discord-bot",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
